Adicionei um parágrafp

--- a/site-exemplo 2/index.html
+++ b/site-exemplo 2/index.html
@@ -9,5 +9,6 @@
   <h1>Olá, mundo 2!</h1>
   <hr>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos neque, ullam iure hic esse, harum officia minus maxime commodi illo sit? Pariatur incidunt non assumenda qui minima ipsa nihil soluta.</p>  
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi eveniet modi quasi, minus alias quis necessitatibus, asperiores officiis cumque reiciendis voluptates, nihil labore quisquam consequuntur rem eius aliquid. Ex, blanditiis.</p>
 </body>
 </html>
